--- a/PetProject++/pom.xml
+++ b/PetProject++/pom.xml
@@ -81,6 +81,11 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.uqbar-project</groupId>
+			<artifactId>jpa-java8-extras</artifactId>
+			<version>1.0-alpha-1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
