--- a/PetProject++/pom.xml
+++ b/PetProject++/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>jpa-java8-extras</artifactId>
 			<version>1.0-alpha-1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.jknack</groupId>
+			<artifactId>handlebars</artifactId>
+			<version>4.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
