--- a/PetProject++/src/main/resources/application.properties
+++ b/PetProject++/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port = 8080
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
