--- a/PetProject++/src/main/resources/application.properties
+++ b/PetProject++/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 server.port = 8080
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://LAPTOP-57722UHB;databaseName=DDS
+spring.datasource.username=sa
+spring.datasource.password=123456
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql = true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
