--- a/PetProject++/src/main/resources/application.properties
+++ b/PetProject++/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 server.port = 8080
+
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://LAPTOP-57722UHB;databaseName=DDS
+spring.datasource.url=jdbc:sqlserver://DESKTOP-TPB7GJ9\\UTNFRBA;databaseName=DISENIO
 spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.password=matipartarrie
+
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
