persiste con tablas duplicadas y no duplicadas (todavia no hay login)

--- a/PetProject++/src/main/resources/application.properties
+++ b/PetProject++/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 server.port = 8080
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://DESKTOP-TPB7GJ9\\UTNFRBA;databaseName=DDS
+spring.datasource.username=sa
+spring.datasource.password=matipartarrie
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql = true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto=update
