--- a/PetProject++/src/main/resources/application.properties
+++ b/PetProject++/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.properties.hibernate.format_sql = true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
